[package]
name = "num-rug-adapter"
version = "0.1.5"
authors = ["Marco A L Barbosa <malbarbo@gmail.com>"]
edition = "2018"
description = "An adapter to use num crate where rug is needed."
license = "MIT/Apache-2.0"
repository = "https://github.com/malbarbo/num-rug-adapter"
keywords = ["mathematics", "numerics", "bignum"]
categories = ["api-bindings", "science"]
readme = "README.md"

[dependencies]
libc = "0.2"
num-bigint = "0.2"
num-integer = "0.1.41"
num-rational = "0.2"
num-traits = "0.2"
